# cloud-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  shell.nix
cloud-api/: Cargo.toml
cloud-api/src/: auth_token.rs  config.rs  main.rs  models.rs
cloud-api/src/services/: auth.rs  file.rs  mod.rs  user.rs
cloud-desktop/: Cargo.toml  index.html  sync.db
cloud-desktop/src/: config.rs  context.rs  global_state.rs  main.rs  path_helper.rs
cloud-desktop/src/components/: file_element.rs  file_list.rs  mod.rs
cloud-desktop/src/routes/: files.rs  home.rs  mod.rs  setup.rs
cloud-desktop/src/services/: api_service.rs  database_service.rs  mod.rs
cloud-proto/: Cargo.toml  build.rs
cloud-proto/proto/: auth.proto  file.proto  user.proto
cloud-proto/src/: lib.rs
