[package]
name = "cloud-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud-proto = { path = "../cloud-proto" }

anyhow = "1.0.69"
argon2 = "0.4.1"
blake3 = "1.3.3"
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
futures-util = "0.3.26"
jsonwebtoken = "8.2.0"
mongodb = "2.4.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["compat", "io"] }
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
