[package]
name = "cloud-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud-proto = { path = "../cloud-proto" }

anyhow = "1.0.69"
async-stream = "0.3.3"
blake3 = "1.3.3"
byte-unit = "4.0.18"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
dioxus-router = "0.3.0"
fermi = "0.3.0"
futures = "0.3.26"
futures-util = "0.3.26"
serde = "1.0.152"
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1.25.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.4", features = ["io"] }
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
walkdir = "2.3.2"
